--- a/style.css
+++ b/style.css
@@ -123,11 +123,12 @@ a:hover {
     top: 28px;
     right: 30px;
     background: transparent;
+    width: 40px;
     height: 40px;
     border-radius: 50%;
     box-shadow: 0px 0px 0px 0px white;
     z-index: -1 ;
-    transition: 400ms ease-in-out 0;
+    transition: 400ms ease-in-out 0s;
 }
 
 .menu-itens {
@@ -199,7 +200,7 @@ a:hover {
     height: auto;
     display: flex;
     flex-direction: column;
-    justify-content: space-between;
+    justify-content: space-evenly;
     align-items: center;
     margin: 3rem 0;
 }
@@ -214,7 +215,7 @@ a:hover {
 .card {
     height: 300px;
     width: 400px;
-    margin: 3rem 0;
+    margin: 3rem 0 0 0;
     background-image: url('./room.jpg');
     background-position: center;
     background-repeat: no-repeat;
@@ -222,7 +223,7 @@ a:hover {
     display: flex;
     justify-content: center;
     align-items: center;
-    filter: grayscale(0.6);
+    filter: grayscale(0.65);
     color: white;
     cursor: pointer;
     transition: 0.3s;
@@ -235,6 +236,15 @@ a:hover {
     color: #050404;
 }
 
+.card-wrapper {
+    text-align: center;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    position: relative;
+}
+ 
 .card-wrapper::before {
     content: '';
     position: absolute;
@@ -271,4 +281,58 @@ card:hover {
     opacity: 1;
     width: 350px;
     height: 250px;
+}
+
+.card:hover > .card-wrapper p {
+    font-size: 14px;
+    opacity: 1;
+    visibility: visible ;
+}
+
+/*footer*/
+.footer {
+    height: 100px;
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background-color: #4a1942;
+}
+
+/* MOBILE */
+
+@media (max-width: 800px) {
+    .social-media {
+        display: flex;
+        flex-direction: column;
+    }
+
+    .container {
+        margin-top: 0;
+    }
+
+    .card-container {
+        flex-direction: column;
+    }
+
+    .container .card-container:nth-child(1),
+    .container .card-container:nth-child(3) {
+        flex-direction: column-reverse;
+    }
+
+    .card {
+        height: 250px;
+        width: 250px;
+    }
+
+    .card-text {
+        width: 90%;
+        margin-top: 2rem;
+        text-align: center;
+    }
+
+    .card:hover > .card-wrapper::before {
+        height: 190px;
+        width: 190px;
+    }
 }
